--- a/index_diary.html
+++ b/index_diary.html
@@ -113,7 +113,6 @@
 
     <script src="js/config.js"></script>
     <script src="js/api.js"></script>
-    <!-- gemini_client.js は使いません（400回避のため）。 -->
     <script src="js/snaps.js"></script>
 
     <script>
@@ -241,7 +240,7 @@
         function getApiBase(){
           const base = (window.APP_CONFIG && window.APP_CONFIG.API_BASE_URL) || '';
           if(!base) throw new Error('AI API の接続先が未設定です（config.js の API_BASE_URL を確認）');
-          return base.replace(/\/+$/,'') + '/exec';
+          return base.replace(/\/+$/,'');  // ★ /exec は“追加しない”
         }
         function getGeminiModel(){
           const cfg = window.APP_CONFIG || {};
@@ -264,18 +263,9 @@
             const s = document.createElement('script');
             const cleanup = ()=>{ try{ delete window[cbName]; }catch{}; if(s.parentNode) s.parentNode.removeChild(s); };
 
-            const timer = setTimeout(()=>{
-              if(!settled){ settled=true; cleanup(); reject(new Error('jsonp_timeout')); }
-            }, 20000); // 20秒
+            const timer = setTimeout(()=>{ if(!settled){ settled=true; cleanup(); reject(new Error('jsonp_timeout')); } }, 20000);
 
-            window[cbName] = (data)=>{
-              if(settled) return;
-              settled = true;
-              clearTimeout(timer);
-              cleanup();
-              resolve(data);
-            };
-
+            window[cbName] = (data)=>{ if(settled) return; settled=true; clearTimeout(timer); cleanup(); resolve(data); };
             s.src = url;
             s.onerror = ()=>{ if(!settled){ settled=true; clearTimeout(timer); cleanup(); reject(new Error('jsonp_load_error')); } };
             document.head.appendChild(s);
@@ -284,43 +274,29 @@
 
         // POST（GASは内部で鍵保持）
         async function callPost(apiBase, prompt, {model, temperature, maxTokens}){
-          const body = {
-            model,
-            contents: [{ role: "user", parts: [{ text: String(prompt||'') }]}],
-            temperature, maxTokens
-          };
-          const res = await fetch(apiBase, {
-            method:"POST",
-            headers:{ "Content-Type":"application/json" },
-            body: JSON.stringify(body)
-          });
+          const body = { model, contents: [{ role: "user", parts: [{ text: String(prompt||'') }]}], temperature, maxTokens };
+          const res = await fetch(apiBase, { method:"POST", headers:{ "Content-Type":"application/json" }, body: JSON.stringify(body) });
           const data = await res.json().catch(()=> ({}));
           if(!res.ok || data.error){ throw new Error((data && data.error && data.error.message) || ('HTTP '+res.status)); }
           return data;
         }
 
-        // 同時に走らせて「先に成功した方」を採用
+        // 先に成功した方を採用
         function callAIwithRace(prompt, {maxTokens=240}={}){
           const apiBase = getApiBase();
           const model = getGeminiModel();
           const temperature = getTemp();
-
           return new Promise((resolve, reject)=>{
             let done=false;
-
-            const onOk = (data)=>{ if(done) return; done=true; resolve(data); };
-            const onNg = ()=>{ /* 片方が失敗してももう片方の結果を待つ */ };
-
+            const onOk = (d)=>{ if(done) return; done=true; resolve(d); };
+            const onNg = ()=>{};
             callPost(apiBase, prompt, {model, temperature, maxTokens}).then(onOk).catch(onNg);
             callJsonp(apiBase, prompt, {model, temperature, maxTokens}).then(onOk).catch(onNg);
-
-            // 最終保険（22秒で両方ダメなら諦める）
             setTimeout(()=>{ if(!done) reject(new Error('both_timeout')); }, 22000);
           });
         }
 
         function pickTextFromAI(data){
-          // 期待形：{candidates:[{content:{parts:[{text:"..."}]}}]}
           return (data && data.candidates && data.candidates[0] && data.candidates[0].content && data.candidates[0].content.parts && data.candidates[0].content.parts[0] && data.candidates[0].content.parts[0].text) || '';
         }
 
@@ -357,7 +333,6 @@
           function clearError(){ errBox.style.display='none'; errBox.textContent=''; }
 
           const catId = qs().get('catId') || qs().get('catid');
-          // カレンダーボタンに catId を付ける
           const calLink = document.querySelector('a[href="index_calendar.html"]');
           if (calLink && catId) calLink.href = 'index_calendar.html?catId=' + encodeURIComponent(catId);
 
@@ -383,8 +358,7 @@
           document.getElementById('tw-title').textContent=(cat.name||'ネコ')+'のつぶやき';
 
           const genderLabel = { male: "おとこの子", female: "おんなの子", other: "わからない" };
-          document.getElementById('cat-gender').textContent =
-            "性別: " + (genderLabel[cat.gender] || "わからない");
+          document.getElementById('cat-gender').textContent = "性別: " + (genderLabel[cat.gender] || "わからない");
 
           if(cat.avatar){
             av.innerHTML=''; const im=new Image();
@@ -494,7 +468,6 @@
               let finalText='';
               for(let i=0;i<4;i++){
                 const add = i? '\n【追加条件】前回までと似た言い回しを避け、新しい語彙で書き直してください（強度:'+i+'）。' : '';
-                // ★ POST＋JSONP の「同時実行」で、先に来た方を採用（JSONPは最大20秒待ち）
                 const data = await callAIwithRace(basePrompt + add, {maxTokens:240});
                 let draft = sanitize(String(pickTextFromAI(data)||''));
                 if(!/[。！？]$/.test(draft)) draft+='。';
@@ -514,7 +487,7 @@
             }catch(e){
               const msg = (e && e.message === 'jsonp_timeout') ? 'AIへの接続が混み合っています。少し待って、もう一度ためしてください。'
                         : (e && e.message === 'both_timeout') ? '少し時間がかかっています。通信状況を確認して、もう一度ためしてください。'
-                        : ('AI生成に失敗しました。Geminiの設定やネットワークをご確認ください。' + (e && e.message ? '（詳細: ' + e.message + '）' : ''));
+                        : ('AI生成に失敗しました。AI（DeepSeek）の設定やネットワークをご確認ください。' + (e && e.message ? '（詳細: ' + e.message + '）' : ''));
               showErr(msg);
             }
           }
