--- a/index_diary.html
+++ b/index_diary.html
@@ -315,7 +315,7 @@
           return (data && data.candidates && data.candidates[0] && data.candidates[0].content && data.candidates[0].content.parts && data.candidates[0].content.parts[0] && data.candidates[0].content.parts[0].text) || '';
         }
 
-        /* ====== 年齢×性格の口調方針をプロンプトに組み立てる（1〜2歳を厳密に段階化） ====== */
+        /* ====== 年齢×性格の口調方針（1〜2歳を厳密に段階化＆全ひらがな禁止） ====== */
         function buildToneRules(ageYears, persona){
           const lines = [];
           const pj = personaJp(persona);
@@ -323,14 +323,14 @@
           if (ageYears == null) {
             lines.push('年齢不明：自然でやさしい日本語。');
           } else if (ageYears < 1) {
-            lines.push('0〜1歳：ひらがな中心（約90%）、漢字はごく少なめ。文は短く、幼い語感。');
+            lines.push('0〜1歳：ひらがな中心（約90%）、漢字はごく少なめ（10%以下）。文は短く、幼い語感。');
           } else if (ageYears < 2) {
             // 1.0〜2.0 の間で、漢字率を 20% → 55% に直線的に増やす
-            const r = Math.min(1, Math.max(0, ageYears - 1)); // 0..1
-            const kanji = Math.round(20 + 35 * r);            // 20%..55%
-            const hira  = 100 - kanji;
-            lines.push('1〜2歳（移行期）：ひらがな約'+hira+'%、漢字約'+kanji+'%（目安）。');
-            lines.push('語感はすこしずつ「'+pj+'」寄りに強める。早口・装飾はやりすぎない。');
+            const r = Math.min(1, Math.max(0, ageYears - 1));     // 0..1
+            const kanji = Math.round(20 + 35 * r);                 // 20%..55%
+            const hira  = Math.max(0, 100 - kanji);
+            lines.push('1〜2歳（移行期）：**必ず**漢字を全体の約'+kanji+'%含め、ひらがなは約'+hira+'%ていど。');
+            lines.push('**全ひらがなは禁止**。語感はすこしずつ「'+pj+'」寄りに強める。');
           } else {
             lines.push('2歳以上：自然な日本語。性格（'+pj+'）の語感をはっきり。');
           }
@@ -377,6 +377,11 @@
             rules.push('- 主人のひとことには一度だけ軽く触れる。繰り返さない。');
           } else {
             rules.push('- この回は主人のひとことには触れない。');
+          }
+
+          // ★ 1〜2歳帯の比率遵守を明文化（モデルに強制）
+          if (ageYears!=null && ageYears>=1 && ageYears<2){
+            rules.push('- この回は「全ひらがな」を禁止。名詞や一般語は**目安の漢字比率**に従って漢字も使うこと。');
           }
 
           return [
@@ -432,16 +437,32 @@
           } else {
             av.textContent=firstChar(cat.name||'？'); av.style.background=colFor(cat.name||'?');
           }
+
+          // ★ 年齢表示：0歳台は「◯か月」、1歳以上は常に「X歳 Yか月」
           const ageEl=document.getElementById('cat-age');
           if(ageYears!=null){
             if(bday){
-              if(ageYears<2){ ageEl.textContent='年齢: '+Math.floor(ageYears*12)+'か月'; }
-              else{ const y=Math.floor(ageYears), m=Math.floor((ageYears-y)*12); ageEl.textContent='年齢: '+y+'歳 '+m+'か月'; }
+              const totalMonths = Math.max(0, Math.floor(ageYears*12));
+              const y = Math.floor(totalMonths/12);
+              const m = totalMonths % 12;
+              if(y===0){
+                ageEl.textContent = '年齢: ' + m + 'か月';
+              }else{
+                ageEl.textContent = '年齢: ' + y + '歳 ' + m + 'か月';
+              }
             }else{
               const months=Math.max(1, Math.floor((ageYears||0)*12));
-              ageEl.textContent='年齢: 約'+months+'か月（推定）';
+              if (months < 12){
+                ageEl.textContent='年齢: 約'+months+'か月（推定）';
+              }else{
+                const y=Math.floor(months/12), m=months%12;
+                ageEl.textContent='年齢: 約'+y+'歳 '+m+'か月（推定）';
+              }
             }
-          } else { ageEl.textContent='年齢: 不明'; }
+          } else {
+            ageEl.textContent='年齢: 不明';
+          }
+
           document.getElementById('cat-breed').textContent='猫種: '+(cat.breed||'-');
           document.getElementById('cat-personality').textContent='性格: '+(cat.personality||'-');
           document.getElementById('cat-fav').textContent='特徴: '+(cat.favorites||'-');
