--- a/index_diary.html
+++ b/index_diary.html
@@ -251,19 +251,30 @@
           return re.test(s);
         }
 
+        /* ====== 文字種比率チェック（出力検証用） ====== */
+        function kanjiRatio(text){
+          const KANJI=/[一-龯々〆〇ヶ]/g;
+          const JP=/[ぁ-んァ-ン一-龯々〆〇ヶ]/g;
+          const all=(text||'').match(JP)||[];
+          const kj =(text||'').match(KANJI)||[];
+          return all.length? (kj.length/all.length) : 0;
+        }
+        function targetKanjiRate(age){
+          if(age==null) return null;
+          if(age<1) return 0.05; // 5%目安（ごく少数）
+          if(age<2){ const r=Math.min(1,Math.max(0,age-1)); return (20+35*r)/100; } // 1.0→0.20, 2.0→0.55
+          return 0.45; // 2歳以上の参考値（厳密運用はしない）
+        }
+
         /* ====== DeepSeek（GAS）呼び出し：POST＋JSONP 同時実行 ====== */
         function getApiBase(){
           const base = (window.APP_CONFIG && window.APP_CONFIG.API_BASE_URL) || '';
           if(!base) throw new Error('AI API の接続先が未設定です（config.js の API_BASE_URL を確認）');
-          return base.replace(/\/+$/,'');  // /exec は“追加しない”
+          return base.replace(/\/+$/,'');
         }
-        function getGeminiModel(){
-          const cfg = window.APP_CONFIG || {};
-          return cfg.GEMINI_MODEL || cfg.MODEL || 'deepseek-chat';
-        }
+        function getGeminiModel(){ const cfg = window.APP_CONFIG || {}; return cfg.GEMINI_MODEL || cfg.MODEL || 'deepseek-chat'; }
         function getTemp(){ return (window.APP_CONFIG && window.APP_CONFIG.GEMINI && window.APP_CONFIG.GEMINI.TEMPERATURE) || 0.9; }
 
-        // JSONP（20秒タイムアウト）
         function callJsonp(apiBase, prompt, {model, temperature, maxTokens}){
           return new Promise((resolve, reject)=>{
             const cbName = 'NT_JSONP_CB_' + Date.now() + '_' + Math.random().toString(36).slice(2);
@@ -273,75 +284,58 @@
               + (typeof maxTokens==='number' ? '&maxTokens=' + encodeURIComponent(maxTokens) : '')
               + '&prompt=' + encodeURIComponent(prompt)
               + '&callback=' + encodeURIComponent(cbName);
-
-            let settled = false;
-            const s = document.createElement('script');
-            const cleanup = ()=>{ try{ delete window[cbName]; }catch{}; if(s.parentNode) s.parentNode.removeChild(s); };
-
-            const timer = setTimeout(()=>{ if(!settled){ settled=true; cleanup(); reject(new Error('jsonp_timeout')); } }, 20000);
-
-            window[cbName] = (data)=>{ if(settled) return; settled=true; clearTimeout(timer); cleanup(); resolve(data); };
-            s.src = url;
-            s.onerror = ()=>{ if(!settled){ settled=true; clearTimeout(timer); cleanup(); reject(new Error('jsonp_load_error')); } };
+            let settled=false;
+            const s=document.createElement('script');
+            const cleanup=()=>{ try{ delete window[cbName]; }catch{}; if(s.parentNode) s.parentNode.removeChild(s); };
+            const timer=setTimeout(()=>{ if(!settled){ settled=true; cleanup(); reject(new Error('jsonp_timeout')); } },20000);
+            window[cbName]=(data)=>{ if(settled) return; settled=true; clearTimeout(timer); cleanup(); resolve(data); };
+            s.src=url; s.onerror=()=>{ if(!settled){ settled=true; clearTimeout(timer); cleanup(); reject(new Error('jsonp_load_error')); } };
             document.head.appendChild(s);
           });
         }
-
-        // POST（GASは内部で鍵保持）
         async function callPost(apiBase, prompt, {model, temperature, maxTokens}){
-          const body = { model, contents: [{ role: "user", parts: [{ text: String(prompt||'') }]}], temperature, maxTokens };
-          const res = await fetch(apiBase, { method:"POST", headers:{ "Content-Type":"application/json" }, body: JSON.stringify(body) });
-          const data = await res.json().catch(()=> ({}));
-          if(!res.ok || data.error){ throw new Error((data && data.error && data.error.message) || ('HTTP '+res.status)); }
+          const body={ model, contents:[{role:"user",parts:[{text:String(prompt||'')}]}], temperature, maxTokens };
+          const res=await fetch(apiBase,{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(body)});
+          const data=await res.json().catch(()=>({}));
+          if(!res.ok||data.error){ throw new Error((data&&data.error&&data.error.message)||('HTTP '+res.status)); }
           return data;
         }
-
-        // 先に成功した方を採用
-        function callAIwithRace(prompt, {maxTokens=240}={}){
-          const apiBase = getApiBase();
-          const model = getGeminiModel();
-          const temperature = getTemp();
-          return new Promise((resolve, reject)=>{
+        function callAIwithRace(prompt,{maxTokens=240}={}){
+          const apiBase=getApiBase(), model=getGeminiModel(), temperature=getTemp();
+          return new Promise((resolve,reject)=>{
             let done=false;
-            const onOk = (d)=>{ if(done) return; done=true; resolve(d); };
-            const onNg = ()=>{};
-            callPost(apiBase, prompt, {model, temperature, maxTokens}).then(onOk).catch(onNg);
-            callJsonp(apiBase, prompt, {model, temperature, maxTokens}).then(onOk).catch(onNg);
-            setTimeout(()=>{ if(!done) reject(new Error('both_timeout')); }, 22000);
+            const ok=d=>{ if(done) return; done=true; resolve(d); };
+            const ng=()=>{};
+            callPost(apiBase,prompt,{model,temperature,maxTokens}).then(ok).catch(ng);
+            callJsonp(apiBase,prompt,{model,temperature,maxTokens}).then(ok).catch(ng);
+            setTimeout(()=>{ if(!done) reject(new Error('both_timeout')); },22000);
           });
         }
-
         function pickTextFromAI(data){
-          return (data && data.candidates && data.candidates[0] && data.candidates[0].content && data.candidates[0].content.parts && data.candidates[0].content.parts[0] && data.candidates[0].content.parts[0].text) || '';
+          return (data&&data.candidates&&data.candidates[0]&&data.candidates[0].content&&data.candidates[0].content.parts&&data.candidates[0].content.parts[0]&&data.candidates[0].content.parts[0].text)||'';
         }
 
-        /* ====== 年齢×性格の口調方針（1〜2歳を厳密に段階化＆全ひらがな禁止） ====== */
+        /* ====== 年齢×性格の口調（1〜2歳は段階化／0〜1歳は超ひらがな） ====== */
         function buildToneRules(ageYears, persona){
-          const lines = [];
-          const pj = personaJp(persona);
-
-          if (ageYears == null) {
+          const pj = (persona==='energetic'?'元気':persona==='calm'?'おだやか':persona==='clingy'?'甘え':persona==='mypace'?'マイペース':persona==='cool'?'クール':'素直');
+          const lines=[];
+          if (ageYears==null){
             lines.push('年齢不明：自然でやさしい日本語。');
-          } else if (ageYears < 1) {
-            lines.push('0〜1歳：ひらがな中心（約90%）、漢字はごく少なめ（10%以下）。文は短く、幼い語感。');
-          } else if (ageYears < 2) {
-            // 1.0〜2.0 の間で、漢字率を 20% → 55% に直線的に増やす
-            const r = Math.min(1, Math.max(0, ageYears - 1));     // 0..1
-            const kanji = Math.round(20 + 35 * r);                 // 20%..55%
-            const hira  = Math.max(0, 100 - kanji);
-            lines.push('1〜2歳（移行期）：**必ず**漢字を全体の約'+kanji+'%含め、ひらがなは約'+hira+'%ていど。');
-            lines.push('**全ひらがなは禁止**。語感はすこしずつ「'+pj+'」寄りに強める。');
+          } else if (ageYears<1){
+            lines.push('0〜1歳：ひらがな95%目安。漢字はごく少数（0〜5%）だけ。文は短く、やさしい語彙。');
+          } else if (ageYears<2){
+            const r=Math.min(1,Math.max(0,ageYears-1));
+            const kanji=Math.round(20+35*r), hira=100-kanji;
+            lines.push('1〜2歳（移行期）：ひらがな約'+hira+'%、漢字約'+kanji+'%（目安）。**全ひらがなは禁止**。');
+            lines.push('語感は少しずつ「'+pj+'」寄りに強める。');
           } else {
             lines.push('2歳以上：自然な日本語。性格（'+pj+'）の語感をはっきり。');
           }
-
-          // 性格ニュアンス（テンプレ文は使わず、指示だけ）
-          if (persona==='energetic')  lines.push('テンポよく・明るく。短めの文＋必要に応じて軽い感嘆符。体の動きを少しだけ描く。');
-          if (persona==='calm')       lines.push('やわらか・ていねい。落ち着いた語感。やさしい比喩。');
-          if (persona==='clingy')     lines.push('呼びかけを少し増やし、安心を求めるニュアンス。');
+          if (persona==='energetic')  lines.push('テンポよく・明るく。必要に応じて軽い感嘆符。');
+          if (persona==='calm')       lines.push('やわらか・ていねい。落ち着いた語感。');
+          if (persona==='clingy')     lines.push('呼びかけを少し増やして安心を求める。');
           if (persona==='mypace')     lines.push('のんびり。ときどき「…」で間をとる。');
-          if (persona==='cool')       lines.push('端的に言い切る。感嘆符は控えめ。やや距離のある語感。');
-
+          if (persona==='cool')       lines.push('端的に言い切る。感嘆符は控えめ。');
           return lines.join(' / ');
         }
 
@@ -356,7 +350,6 @@
 
           const mentionOwner = !!(opts && opts.mentionOwner);
           const forceComfort = !!(opts && opts.forceComfort);
-
           const tone = buildToneRules(ageYears, persona);
 
           const ownerBlock = mentionOwner
@@ -372,16 +365,20 @@
           ];
 
           if (forceComfort) {
-            rules.push('- 主人のひとことがネガなら、必ず一度だけやさしくフォローし、安心させる表現を入れる。責めない・重くしない。');
+            rules.push('- 主人のひとことがネガなら、必ず一度だけやさしくフォローし、安心させる表現を入れる。');
           } else if (mentionOwner) {
             rules.push('- 主人のひとことには一度だけ軽く触れる。繰り返さない。');
           } else {
             rules.push('- この回は主人のひとことには触れない。');
           }
 
-          // ★ 1〜2歳帯の比率遵守を明文化（モデルに強制）
+          // 1〜2歳の全ひらがな禁止を再強調
           if (ageYears!=null && ageYears>=1 && ageYears<2){
-            rules.push('- この回は「全ひらがな」を禁止。名詞や一般語は**目安の漢字比率**に従って漢字も使うこと。');
+            rules.push('- この回は「全ひらがな」を禁止。名詞や一般語には漢字も適度に使うこと。');
+          }
+          // 0〜1歳は漢字ごく少数を強調
+          if (ageYears!=null && ageYears<1){
+            rules.push('- この回は漢字を**ごく少数**（0〜5%）に限定。やさしい語彙で短めの文にすること。');
           }
 
           return [
@@ -438,26 +435,16 @@
             av.textContent=firstChar(cat.name||'？'); av.style.background=colFor(cat.name||'?');
           }
 
-          // ★ 年齢表示：0歳台は「◯か月」、1歳以上は常に「X歳 Yか月」
+          // ★ 年齢表示：12か月以上は「X歳 Yか月」に統一
           const ageEl=document.getElementById('cat-age');
           if(ageYears!=null){
-            if(bday){
-              const totalMonths = Math.max(0, Math.floor(ageYears*12));
-              const y = Math.floor(totalMonths/12);
-              const m = totalMonths % 12;
-              if(y===0){
-                ageEl.textContent = '年齢: ' + m + 'か月';
-              }else{
-                ageEl.textContent = '年齢: ' + y + '歳 ' + m + 'か月';
-              }
-            }else{
-              const months=Math.max(1, Math.floor((ageYears||0)*12));
-              if (months < 12){
-                ageEl.textContent='年齢: 約'+months+'か月（推定）';
-              }else{
-                const y=Math.floor(months/12), m=months%12;
-                ageEl.textContent='年齢: 約'+y+'歳 '+m+'か月（推定）';
-              }
+            const totalMonths = Math.max(0, Math.floor(ageYears*12));
+            const y = Math.floor(totalMonths/12);
+            const m = totalMonths % 12;
+            if (y===0){
+              ageEl.textContent = '年齢: ' + m + 'か月';
+            } else {
+              ageEl.textContent = '年齢: ' + y + '歳 ' + m + 'か月';
             }
           } else {
             ageEl.textContent='年齢: 不明';
@@ -479,9 +466,7 @@
           try{
             if (window.Snaps && typeof window.Snaps.init === 'function') {
               snaps = window.Snaps.init({ catId: cat.id, fileInputId: 'snap-file', gridId: 'snap-grid', maxSide: 1200 });
-            } else {
-              throw new Error('snaps_not_loaded');
-            }
+            } else { throw new Error('snaps_not_loaded'); }
           }catch(e){
             console.warn('Snaps init failed:', e && e.message ? e.message : e);
             snaps = { hasSnaps: ()=>false, onChange: ()=>{} };
@@ -548,29 +533,58 @@
 
             const others = recentAllTweets(60);
             const ctx = ctxBase();
-
-            // ひとことの扱い：ネガなら必ず触れる。ネガでないときは約1/3だけ触れる。
             const noteRaw = String(ctx.note || '');
             const isNeg = hasNegativeNote(noteRaw);
             const mentionOwner = isNeg || (Math.random() < 0.34);
 
+            const tgt = targetKanjiRate(ctx.ageYears);
+            const marginLow = 0.07;   // 許容下振れ
+            const marginHigh = 0.12;  // 許容上振れ
+            let finalText='';
+            let enforceLevel=0;
+
             try{
-              let finalText='';
-              for(let i=0;i<4;i++){
-                const basePrompt = promptBuilder(ctx, { mentionOwner, forceComfort: isNeg });
-                const addRephrase = i? '\n【追加条件】前回までと似た言い回しを避け、新しい語彙で書き直してください（強度:'+i+'）。' : '';
-                const data = await callAIwithRace(basePrompt + addRephrase, {maxTokens:240});
+              for(let i=0;i<6;i++){
+                let prompt = promptBuilder(ctx, { mentionOwner, forceComfort: isNeg });
+                if (enforceLevel>0){
+                  if (ctx.ageYears!=null && ctx.ageYears<1){
+                    prompt += '\n【制約強化】0〜1歳です。漢字は**ごく少数（0〜5%）**だけにし、それ以外はひらがなでやさしく、短い文で書いてください。';
+                  } else if (ctx.ageYears!=null && ctx.ageYears<2){
+                    const pct = Math.round(tgt*100);
+                    prompt += '\n【制約強化】1〜2歳の移行期です。**全ひらがなは禁止**。漢字は全体の約'+pct+'%（±7%）になるようにしてください。';
+                  }
+                }
+                if (i>0){
+                  prompt += '\n【追加条件】前回と似た言い回しは避け、新しい語彙で書き直してください（強度:'+i+'）。';
+                }
+
+                const data = await callAIwithRace(prompt, {maxTokens:240});
                 let draft = sanitize(String(pickTextFromAI(data)||''));
                 if(!/[。！？]$/.test(draft)) draft+='。';
                 draft = dedupeEndings(draft);
 
+                // 類似チェック
                 const simPrev = prevSaved ? similarity(draft, prevSaved) : 0;
                 const simLast = lastGenerated ? similarity(draft, lastGenerated) : 0;
                 const simOthers = Math.max(...others.map(o=> similarity(draft,o)||0),0);
-                if(simPrev<0.50 && simLast<0.50 && simOthers<0.48){ finalText=draft; break; }
+
+                // 年齢に応じた漢字率チェック
+                const kr = kanjiRatio(draft);
+                let ratioOk = true;
+                if (ctx.ageYears!=null && ctx.ageYears<1){
+                  ratioOk = (kr <= 0.07); // 7%以下
+                } else if (ctx.ageYears!=null && ctx.ageYears<2){
+                  ratioOk = (kr >= (tgt - marginLow)) && (kr <= (tgt + marginHigh));
+                }
+
+                if(simPrev<0.50 && simLast<0.50 && simOthers<0.48 && ratioOk){
+                  finalText=draft; break;
+                } else {
+                  enforceLevel++; // 次は強めに指示
+                }
               }
 
-              if(!finalText) throw new Error('十分に差別化できませんでした');
+              if(!finalText) throw new Error('条件に合う文章が得られませんでした');
 
               finalText = clamp(finalText, TWEET_MAX);
               saveAndShow(ymd, finalText);
